[gd_scene load_steps=2 format=3 uid="uid://b4fh2upqcbns8"]

[ext_resource type="Script" path="res://scenes/ui/user_interface/user_interface.gd" id="1_2282l"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_2282l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GenerateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Generate New Maze"

[node name="BordersButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Ensure Border Walls"

[node name="EntranceExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create Entrance/Exit"

[node name="PathButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Check/Create Path"

[node name="ClearButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clear Maze"
